# cclip

./: .gitignore  Makefile  README.md  cclip.c  cclipd.c  common.c  common.h  config.c  config.h  db.c  db.h  meson.build  meson.options  meson_options.txt  pending_offers.c  pending_offers.h  preview.c  preview.h  wayland.c  wayland.h
examples/: picker-preview.sh  picker.sh  previewer.sh
man/: cclip.1.in  cclip.1.scd  cclipd.1.in  cclipd.1.scd  meson.build
protocol/: meson.build  wlr-data-control-unstable-v1-client-protocol.h  wlr-data-control-unstable-v1.c
src/: cclip.c  cclipd.c  common.h  config.c  config.h  db.c  db.h  log.c  preview.c  preview.h  wayland.c  wayland.h  xmalloc.c
src/cclip/: action_delete.c  action_delete.h  action_get.c  action_get.h  action_list.c  action_list.h  action_tag.c  action_tag.h  action_vacuum.c  action_vacuum.h  action_wipe.c  action_wipe.h  cclip.c  cclip.h  utils.c  utils.h
src/cclip/actions/: actions.c  actions.h  copy.c  delete.c  get.c  list.c  tag.c  tags.c  vacuum.c  wipe.c
src/cclipd/: cclipd.c  cclipd.h  config.c  config.h  db.c  db.h  eventloop.c  eventloop.h  log.h  preview.c  preview.h  proto_impl.c  proto_impl.h  sql.c  sql.h  wayland.c  wayland.h
src/collections/: string.c  string.h  vec.c  vec.h
src/common/: db.c  db.h  db_path.c  db_path.h  db_utils.c  log.c  log.h  macros.h  xmalloc.c  xmalloc.h
